Add some markup experimental design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<p>Drive API Quickstart</p>
+<!-- <p>Drive API Quickstart</p>
 
-<!--Add buttons to initiate auth sequence and sign out-->
 <button (click)="loginGoogle()" id="authorize-button">Authorize</button>
-<button (click)="logoutGoogle()" id="signout-button">Sign Out</button>
+<button (click)="logoutGoogle()" id="signout-button">Sign Out</button> -->
+<app-menu></app-menu>
 
-<pre id="content"></pre>
+<app-welcome></app-welcome>
 
 <router-outlet></router-outlet>
